[package]
name = "cluster-mode"
version = "0.2.0"
authors = ["Md Sarowar Alam <sarowar.cse@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eipi1/cluster-mode"
description = """
Some help to create and manage cluster in Rust
"""
categories = ["network-programming"]
keywords = ["cluster", "distributed-system",]

[dependencies.rust-cloud-discovery]
version = "0.2"

[dependencies.cloud-discovery-kubernetes]
version = "0.2"

[dependencies.almost-raft]
version = "0.2"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.rand]
version = "0.8"

[dependencies.tokio]
version = "1.9"
features = ["time", "sync", "test-util", "macros"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.native-tls]
version = "0.2"

[dependencies.futures-util]
version = "0.3"

[dependencies.async-trait]
version = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.http]
version = "0.2"

[dependencies.hyper]
version = "0.14"

[dependencies.hyper-tls]
version = "0.5"

[dependencies.bytes]
version = "1.0"

[dependencies.log]
version = "0.4"

[dependencies.anyhow]
version = "1.0"

[dev-dependencies.lazy_static]
version = "1.4"

[dev-dependencies.tracing-subscriber]
version = "0.2"
features = ["fmt"]