[package]
name = "cluster-mode"
version = "0.4.0"
authors = ["Md Sarowar Alam <sarowar.cse@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eipi1/cluster-mode"
description = """
Some help to create and manage cluster in Rust
"""
categories = ["network-programming"]
keywords = ["cluster", "distributed-system", "Kubernetes"]

[dependencies.rust-cloud-discovery]
version = "0.2"

[dependencies.cloud-discovery-kubernetes]
version = "0.2"

[dependencies.almost-raft]
#version = "0.3"
path = "../almost-raft"

[dependencies.uuid]
version = "1.17"
features = ["v4"]

[dependencies.tokio]
version = "1.46"
features = ["time", "sync", "test-util", "macros", "rt-multi-thread"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.native-tls]
version = "0.2"

[dependencies.futures-util]
version = "0.3"

[dependencies.async-trait]
version = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.http]
version = "0.2"

[dependencies.hyper]
version = "0.14"

[dependencies.hyper-tls]
version = "0.5"

[dependencies.log]
version = "0.4"

[dependencies.anyhow]
version = "1.0"

[dev-dependencies.derivative]
version = "2.2.0"

[dev-dependencies.lazy_static]
version = "1.5"

[dev-dependencies.env_logger]
version = "0.11"